--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -21,12 +21,15 @@
           <strong>Age:</strong>
           <p>{{member.age}}</p>
         </div>
-          <strong>Last Active:</strong>
-        <p>{{member.lastActive}}</p>
         <div>
-          <strong>Member since:</strong>
-          <p>{{member.created}}</p>
+          <strong>Last Active:</strong>
+          <p>{{member.lastActive | timeago}}</p>
         </div>
+
+          <div>
+            <strong>Member since:</strong>
+            <p>{{member.created | date}}</p>
+          </div>
       </div>
       <div class="card-footer">
         <div class="card-footer">
