--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,12 @@
 <div class="row" *ngIf="member">
   <div class="col-4">
+    <h1>{{member.knownAs}}</h1>
+  </div>
+  <div class="col-8">
+    <h1> Feel free to contact other players</h1>
+  </div>
+
+  <div class="col-4">
     <div class="card">
       <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
       class="card-img top img-thumbnail">
@@ -33,22 +40,28 @@
       </div>
     </div>
   </div>
-    <div class="col-8">
-      <mat-tab-group mat-align-tabs="start">
-        <mat-tab label="Introduction">
-          <p>{{member.introduction}}</p>
-          <p>{{member.lookingFor}}</p>
-        </mat-tab>
-        <mat-tab label="Interests">{{member.interests}}</mat-tab>
-        <mat-tab label="Photos">
-          <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
-            style="display: inline-block; margin-bottom:20px;">
-          </ngx-gallery>
-        </mat-tab>
-        <mat-tab label="Messages">Messages will go here</mat-tab>
-      </mat-tab-group>
+</div>
 
-  </div>
+
+  <div class="col-8">
+
+
+    <tabset #staticTabs>
+      <tab heading="Introduction">
+        <p>{{member.introduction}}</p>
+        <p>{{member.lookingFor}}</p>
+      </tab>
+      <tab heading="Interests">{{member.interests}}</tab>
+      <tab heading="Photos">
+        <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
+        style="display: inline-block; margin-bottom:20px;">
+      </ngx-gallery>
+      </tab>
+      <tab heading="Messages">
+        <app-member-messages [username]="member.username"></app-member-messages>
+      </tab>
+    </tabset>
+    </div>
 </div>
 
 
