--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,67 +1,68 @@
-<div class="row" *ngIf="member">
-  <div class="col-4">
-    <h1>{{member.knownAs}}</h1>
-  </div>
-  <div class="col-8">
-    <h1> Feel free to contact other players</h1>
-  </div>
+  <div class="row">
+    <div class="col-4">
+      <h1>{{member.knownAs}}</h1>
+    </div>
+    <div class="col-8">
+      <h1> Feel free to contact other players</h1>
+    </div>
 
-  <div class="col-4">
-    <div class="card">
-      <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
-      class="card-img top img-thumbnail">
-      <div class="card-body">
-        <div>
-          <strong>Location:</strong>
-          <p>{{member.city}}, {{member.country}}</p>
+    <div class="col-4">
+      <div class="card">
+        <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+        class="card-img top img-thumbnail">
+        <div class="card-body">
+          <div>
+            <strong>Location:</strong>
+            <p>{{member.city}}, {{member.country}}</p>
+          </div>
+
+          <div>
+            <strong>Age:</strong>
+            <p>{{member.age}}</p>
+          </div>
+
+          <div>
+          <strong>Last Active:</strong>
+          <p>{{member.lastActive | timeago}}</p>
         </div>
 
-        <div>
-          <strong>Age:</strong>
-          <p>{{member.age}}</p>
-        </div>
-
-        <div>
-        <strong>Last Active:</strong>
-        <p>{{member.lastActive | timeago}}</p>
-      </div>
-
-        <div>
-          <strong>Member since:</strong>
-          <p>{{member.created | date}}</p>
-        </div>
+          <div>
+            <strong>Member since:</strong>
+            <p>{{member.created | date}}</p>
+          </div>
 
 
-      <div class="card-footer">
-        <div class="btn-group d-flex">
-          <button class="btn btn-primary">Like</button>
-          <button class="btn btn-primary">Message</button>
+        <div class="card-footer">
+          <div class="btn-group d-flex">
+            <button class="btn btn-primary">Like</button>
+            <button (click)="selectTab(3)" class="btn btn-primary">Message</button>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
 
-  <div class="col-8">
+    <div class="col-8">
 
 
-    <tabset #staticTabs>
-      <tab heading="Introduction">
-        <p>{{member.introduction}}</p>
-        <p>{{member.lookingFor}}</p>
-      </tab>
-      <tab heading="Interests">{{member.interests}}</tab>
-      <tab heading="Photos">
-        <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
-        style="display: inline-block; margin-bottom:20px;">
-      </ngx-gallery>
-      </tab>
-      <tab heading="Messages">
-        <app-member-messages [username]="member.username"></app-member-messages>
-      </tab>
-    </tabset>
-    </div>
-</div>
+      <tabset #staticTabs #memberTabs>
+        <tab heading="Introduction" (selectTab)="onTabActivated($event)">
+          <p>{{member.introduction}}</p>
+          <p>{{member.lookingFor}}</p>
+        </tab>
+        <tab heading="Interests" (selectTab)="onTabActivated($event)">{{member.interests}}</tab>
+        <tab heading="Photos" (selectTab)="onTabActivated($event)">
+          <ngx-gallery [options]="galleryOptions" [images]="galleryImages"
+          style="display: inline-block; margin-bottom:20px;">
+        </ngx-gallery>
+        </tab>
+        <tab heading="Messages" (selectTab)="onTabActivated($event)">
+          <!--because from route... have to pass member.username-->
+          <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
+        </tab>
+      </tabset>
+      </div>
+  </div>
 
 
